dataset1235/2025-2/610742602/users/1972734523/executions/677928262_1462915504.log
== RUN (2025-08-28 21:35:34)
-- CODE: 
from math import *

lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
apotema= lado/(2*tan(pi/5))
area=5/2*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:34:47)
-- CODE: 
from math import *

lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
apotema= lado/(2*tan(pi/5))
area=5/2*lado*apotema

PRINT(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado=int(intup("Para calcular a área do pentágono,digite o número de lados:"))
             ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:36:09)
-- CODE: 
from math import *

lado=int(input("Para calcular a área do pentágono,digite o número de lados:"))
apotema= lado/(2*tan(pi/5))
area=5/2*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono,digite o número de lados:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono,digite o número de lados:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono,digite o número de lados:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono,digite o número de lados:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono,digite o número de lados:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono,digite o número de lados:172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:36:06)
-- CODE: 
from math import *

lado=int(input("Para calcular a área do pentágono,digite o número de lados:"))
apotema= lado/(2*tan(pi/5))
area=5/2*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono,digite o número de lados:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono,digite o número de lados:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono,digite o número de lados:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono,digite o número de lados:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono,digite o número de lados:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono,digite o número de lados:172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
